# back_sys

./: .env  .gitignore  AGENTS.md  NOTA_NACIMIENTOS.md  README.md  backup_hospital.sql  deploy.sh  dockerfile  hospital_estructura.sql  informe_owasp.md  informe_sanitizacion.md  informe_seguridad_y_errores.md  main.py  pyproject.toml  query_citas_2024.py  query_citas_2026_ene_may.py  query_citas_cols.py  query_columns.py  query_constancia_2024.py  query_constancia_2026_ene_may.py  query_constancia_check.py  query_constancia_cols.py  query_constancia_tables.py  query_consultas_2024.py  query_consultas_2026_ene_may.py  query_consultas_cols.py  query_nacimientos_2026.py  query_nacimientos_cols.py  query_nacimientos_legacy_2026.py  query_nacimientos_por_fecha.py  query_pacientes_2024.py  query_pacientes_2026_ene_may.py  query_sigsa3_all_especialidades.py  query_sigsa3_cols.py  query_sigsa3_explore.py  query_sigsa3_mayo.py  query_sigsa3_mayo_anios.py  query_sigsa3_meses.py  query_sigsa3_terapia_meses.py  requirement.txt  (+1 more)
api-cie11/: text
app/auth/: login.py
app/database/: db.py  security.py
app/models/: __init__.py  ciclos_consultas.py  citas.py  constancia_nacimiento_historial.py  constancias_nacimiento.py  constancias_nacimientos.py  consultas.py  eventos.py  laboratorios.py  medicos.py  municipios.py  nacimientos_legacy.py  pacientes.py  paises_iso.py  prestamos.py  procedimientos.py  rayos_x.py  renap.py  totales.py  user.py
app/routes/: auth.py  ciclos.py  citas.py  constancia_nacimiento.py  consultas.py  eventos.py  expediente.py  experimento.py  medicos.py  merge_paciente.py  municipios.py  nacimientos_legacy.py  pacientes.py  pacientes_duplicados.py  paises_iso.py  prestamos.py  procedimientos.py  recienNacido.py  renap.py  total.py  user.py
app/schemas/: auth.py  ciclos_consultas.py  citas.py  clasesCiclos.py  common.py  constancia_nacimiento.py  constancias_nacimiento.py  consultas.py  eventos.py  medicos.py  municipios.py  nacimientos_legacy.py  paciente.py  paises_iso.py  prestamos.py  procedimientos.py  renap.py  schemas.py  totales.py  user.py  vista_consulta.py
app/services/: renap_service.py
app/sql/: ciclos-lab-rx.sql  constancias_nacimiento.sql  consultas.sql  init.sql  (+8 more)
backend/: README.md  alembic.ini  main.py  requirement.txt  requirements.txt
core/: config.py  database.py  dependencies.py  exceptions.py  mail.py  security.py
migracion/: ayudas  constancia_nacimiento.md  consultas_migracion.py  conversion.py  depto_muni.py  diccionarios.py  dpi duplicados  ejecutar_migracion.py  inserts.sql  make_pluton.py  migracion.py  normalizados.sql  otra_migracion.py  pluton_schema.sql  roles.md  script.sql  scriptcopy.sql  update_union_old.sql  vistas.sql
referencia oldsys/: model.py
scripts/: README.md  fix_nombre_completo_existing.sql  fix_nombre_completo_trigger.sql  fix_normalize_tipo_parto.sql  fix_swap_tipo_clase_parto.sql  fix_tipo_clase_parto.sql  refactor_nacimientos.sql  setup.sh
test_build/: Cargo.toml
tests/: conftest.py  test_routers.py
(+153 files in other folders)
