[tool.poetry]
name = "back-sys"
version = "2.0.0"
description = "backend medicalapp"
authors = ["chaknogf <chaknogf@gmail.com>"]
license = "gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.8.0"
bcrypt = "3.2.0"
certifi = "2025.8.3"
cffi = "1.17.1"
click = "8.1.8"
contourpy = "1.3.1"
cryptography = "44.0.2"
cycler = "0.12.1"
dnspython = "2.7.0"
ecdsa = "0.19.0"
email-validator = "2.2.0"
et-xmlfile = "2.0.0"
fastapi = "0.115.11"
fonttools = "4.56.0"
greenlet = "3.2.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
kiwisolver = "1.4.8"
matplotlib = "3.10.1"
narwhals = "1.30.0"
numpy = "2.2.3"
openpyxl = "3.1.5"
packaging = "24.2"
pandas = "2.2.3"
passlib = "1.7.4"
pillow = "11.1.0"
plotly = "6.0.0"
psycopg2-binary = "2.9.10"
pyasn1 = "0.4.8"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
pyjwt = "2.10.1"
pymysql = "1.1.1"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.4.0"
python-multipart = "0.0.20"
pytz = "2025.1"
rsa = "4.9"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.38"
starlette = "0.46.1"
typing-extensions = "4.12.2"
tzdata = "2025.1"
uvicorn = "0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
